--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -69,9 +69,7 @@
         "plantuml.exportOutDir": "docs/PNG",
         "plantuml.exportIncludeFolderHeirarchy": true,
         "plantuml.exportSubFolder": false,
-        "plantuml.jarArgs": [
-          "-DPLANTUML_LIMIT_SIZE=8192"
-        ],
+        "plantuml.jarArgs": ["-DPLANTUML_LIMIT_SIZE=8192"],
         "prettier.prettierPath": "./node_modules/prettier"
       }
     }
