--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -70,7 +70,11 @@
         "plantuml.exportIncludeFolderHeirarchy": true,
         "plantuml.exportSubFolder": false,
         "plantuml.jarArgs": ["-DPLANTUML_LIMIT_SIZE=8192"],
-        "prettier.prettierPath": "./node_modules/prettier"
+        "prettier.prettierPath": "./node_modules/prettier",
+        "markdownlint.config": {
+          "MD013": false,
+          "MD049": { "style": "underscore" }
+        }
       }
     }
   },
